--- a/lab_6/lab_06-1 (1).ipynb
+++ b/lab_6/lab_06-1 (1).ipynb
@@ -15165,7 +15165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "a9fee21e",
    "metadata": {},
    "outputs": [],
@@ -15200,7 +15200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "3a0a8bdf-b27f-4918-b3b3-dfcf54d7bff1",
    "metadata": {},
    "outputs": [],
@@ -15210,12 +15210,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "b3b4081c-ba60-42fd-b738-024967858114",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>museum_name</th>\n",
+       "      <th>museum_type</th>\n",
+       "      <th>museum_city</th>\n",
+       "      <th>geocode</th>\n",
+       "      <th>geo_importance</th>\n",
+       "      <th>geo_class</th>\n",
+       "      <th>geo_type</th>\n",
+       "      <th>geo_address</th>\n",
+       "      <th>geo_latitude</th>\n",
+       "      <th>geo_longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barber Vintage Motorsports Museum</td>\n",
+       "      <td>Auto/Transportation Museum</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>Barber Vintage Motorsports Museum</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>tourism</td>\n",
+       "      <td>museum</td>\n",
+       "      <td>Barber Vintage Motorsports Museum, Barber Moto...</td>\n",
+       "      <td>33.533247</td>\n",
+       "      <td>-86.614174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>USS Alabama Battleship Memorial Park</td>\n",
+       "      <td>Boat Museum &amp; Military Museum</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>USS Alabama Battleship Memorial Park</td>\n",
+       "      <td>0.315434</td>\n",
+       "      <td>leisure</td>\n",
+       "      <td>park</td>\n",
+       "      <td>USS Alabama Battleship Memorial Park, Mobile, ...</td>\n",
+       "      <td>30.684383</td>\n",
+       "      <td>-88.015274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Fountainhead Antique Auto Museum</td>\n",
+       "      <td>Auto/Transportation Museum</td>\n",
+       "      <td>Fairbanks</td>\n",
+       "      <td>Fountainhead Antique Auto Museum</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>tourism</td>\n",
+       "      <td>museum</td>\n",
+       "      <td>Fountainhead Antique Auto Museum, 212, Wedgewo...</td>\n",
+       "      <td>64.860824</td>\n",
+       "      <td>-147.713651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Musical Instrument Museum</td>\n",
+       "      <td>Music Museum</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>Musical Instrument Museum</td>\n",
+       "      <td>0.254365</td>\n",
+       "      <td>tourism</td>\n",
+       "      <td>museum</td>\n",
+       "      <td>Musical Instrument Museum, 4725, East Mayo Bou...</td>\n",
+       "      <td>33.667508</td>\n",
+       "      <td>-111.978336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Pima Air &amp; Space Museum</td>\n",
+       "      <td>Aircraft/Aviation Museum</td>\n",
+       "      <td>Tucson</td>\n",
+       "      <td>Pima Air &amp; Space Museum</td>\n",
+       "      <td>0.346844</td>\n",
+       "      <td>tourism</td>\n",
+       "      <td>museum</td>\n",
+       "      <td>Pima Air &amp; Space Museum, 6000, East Valencia R...</td>\n",
+       "      <td>32.136441</td>\n",
+       "      <td>-110.865940</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     state                           museum_name  \\\n",
+       "0  Alabama     Barber Vintage Motorsports Museum   \n",
+       "1  Alabama  USS Alabama Battleship Memorial Park   \n",
+       "2   Alaska      Fountainhead Antique Auto Museum   \n",
+       "3  Arizona             Musical Instrument Museum   \n",
+       "4  Arizona               Pima Air & Space Museum   \n",
+       "\n",
+       "                     museum_type museum_city  \\\n",
+       "0     Auto/Transportation Museum  Birmingham   \n",
+       "1  Boat Museum & Military Museum      Mobile   \n",
+       "2     Auto/Transportation Museum   Fairbanks   \n",
+       "3                   Music Museum     Phoenix   \n",
+       "4       Aircraft/Aviation Museum      Tucson   \n",
+       "\n",
+       "                                geocode  geo_importance geo_class geo_type  \\\n",
+       "0     Barber Vintage Motorsports Museum        0.000010   tourism   museum   \n",
+       "1  USS Alabama Battleship Memorial Park        0.315434   leisure     park   \n",
+       "2      Fountainhead Antique Auto Museum        0.000010   tourism   museum   \n",
+       "3             Musical Instrument Museum        0.254365   tourism   museum   \n",
+       "4               Pima Air & Space Museum        0.346844   tourism   museum   \n",
+       "\n",
+       "                                         geo_address  geo_latitude  \\\n",
+       "0  Barber Vintage Motorsports Museum, Barber Moto...     33.533247   \n",
+       "1  USS Alabama Battleship Memorial Park, Mobile, ...     30.684383   \n",
+       "2  Fountainhead Antique Auto Museum, 212, Wedgewo...     64.860824   \n",
+       "3  Musical Instrument Museum, 4725, East Mayo Bou...     33.667508   \n",
+       "4  Pima Air & Space Museum, 6000, East Valencia R...     32.136441   \n",
+       "\n",
+       "   geo_longitude  \n",
+       "0     -86.614174  \n",
+       "1     -88.015274  \n",
+       "2    -147.713651  \n",
+       "3    -111.978336  \n",
+       "4    -110.865940  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_museums"
+    "df_museums.head()"
    ]
   },
   {
