--- a/lab_9/lab_09 2.ipynb
+++ b/lab_9/lab_09 2.ipynb
@@ -18,11 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69d4b5a1-878c-4f9a-b93c-ea2ca5603f58",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# packages in environment at /Users/manojdannana/anaconda3:\n",
+      "#\n",
+      "# Name                    Version                   Build  Channel\n",
+      "pylint-venv               2.3.0           py311hca03da5_0  \n",
+      "python-dotenv             0.21.0          py311hca03da5_0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda list env"
+   ]
   },
   {
    "cell_type": "markdown",
