--- a/week_11/week_11-2 (1)/lab_11.ipynb
+++ b/week_11/week_11-2 (1)/lab_11.ipynb
@@ -19186,7 +19186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "id": "960f0de6-6cc9-4c12-9b3f-38130f3eb604",
    "metadata": {},
    "outputs": [
@@ -19194,7 +19194,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance between AgentZero and BEERchitect: 1.4142135623730951\n"
+      "Distance between AgentZero and BEERchitect: 1.4142135623730951\n",
+      "Distance between BeerFMAndy and Beerandraiderfan: 1.4142135623730958\n"
      ]
     }
    ],
@@ -19205,20 +19206,12 @@
     "distance1 = euclidean(user1, user2)\n",
     "print(\"Distance between AgentZero and BEERchitect:\", distance1)\n",
     "\n",
-    "user3 = df_user_profiles.loc['BeerFMAndy', :]\n",
-    "user4 = df_user_profiles.loc['Beerandraiderfan', :]\n",
+    "user3 = df_user_usage.loc['BeerFMAndy', :]\n",
+    "user4 = df_user_usage.loc['Beerandraiderfan', :]\n",
     "\n",
     "distance2 = euclidean(user3, user4)\n",
     "print(\"Distance between BeerFMAndy and Beerandraiderfan:\", distance2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc611981-d4d6-4ca5-a656-581d7dcc9d08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
