--- a/Final Project/Untitled.ipynb
+++ b/Final Project/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "id": "54529585-6f90-4561-a31f-47aa041e6a26",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "id": "8eea97bb-421a-4fba-82c4-c806c0f2a016",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 3,
    "id": "fdcc5beb-507e-451a-b86c-e8893e0c09f7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "id": "7fa8cd67-18ed-4a76-8aeb-190d6fa836bb",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "id": "52364dad-4174-41cd-96a1-b66e20153b85",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "id": "37d57cf2-2e12-455c-817b-f1c899dca299",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 7,
    "id": "f8781b44-75e7-48f5-ac7c-2885eff32b8d",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "4                1.0        negative  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 8,
    "id": "fce183c6-50d8-4946-ba69-84abad6a3a21",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "4  Woman Who Called Cops On Black Bird-Watcher Lo...        negative"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "id": "dddf8797-d836-42f0-8229-76017651537c",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
    "id": "f7ac99ef-e842-4fc7-a336-06f73d90c9d9",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "4  Queen Elizabeth II has died, Buckingham Palace...        negative"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "id": "5a2c5cb9-88e7-41f0-87df-8f2b5f867ef8",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "id": "995a8a2c-f0fd-4717-bb7d-759e4767138e",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "id": "2dd81b97-4d46-498c-bbab-46cfeebd2207",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "4  Queen Elizabeth II has died, Buckingham Palace...        negative"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 14,
    "id": "ebe69783-2b03-4984-b6f8-4d9e18e3f057",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "(211332, 2)"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 15,
    "id": "393dacc1-9cfc-4a6c-97cd-f411e9f1a53b",
    "metadata": {},
    "outputs": [],
@@ -1277,8 +1277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a327ffe0-fc74-461b-9c04-8b6f8477f72f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"cumilative_headlines.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eac93a8-e224-4707-a79b-c61074dd8c98",
    "metadata": {},
    "outputs": [],
    "source": []
