--- a/week_11/week_11-2 (1)/lab_11.ipynb
+++ b/week_11/week_11-2 (1)/lab_11.ipynb
@@ -19212,6 +19212,24 @@
     "distance2 = euclidean(user3, user4)\n",
     "print(\"Distance between BeerFMAndy and Beerandraiderfan:\", distance2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b3c59c-6d8e-4b20-b175-19ef1737066b",
+   "metadata": {},
+   "source": [
+    "**AgentZero and BEERchitect**: The distance between AgentZero and BEERchitect is approximately 1.41. This indicates that their usage patterns are relatively close to each other in the reduced feature space. A distance of 1.41 suggests some degree of similarity in their behavior or preferences regarding whatever features were retained after PCA. They might have similar usage patterns or preferences in the context of the data being analyzed.\n",
+    "\n",
+    "**BeerFMAndy and Beerandraiderfan**: Similarly, the distance between BeerFMAndy and Beerandraiderfan is also approximately 1.41. This suggests that these two users also exhibit a level of similarity in their usage patterns after PCA dimensionality reduction. Like the previous pair, they might engage in similar activities or have comparable preferences based on the features retained in the reduced dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "419376f3-a881-4f3c-adf9-72d6a94605ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
